<resources>
    <string name="case_is_empty">案例为空</string>
    <string name="sure">确定</string>
    <string name="sure_shi">是</string>
    <string name="sure_deny">否</string>
    <string name="successful">成功</string>
    <string name="failure">失败</string>
    <string name="application_successful">申请成功</string>
    <string name="application_failure">申请失败</string>
    <string name="application_detail">请在提现记录中查看详情</string>
    <string name="application_unbing">解除绑定成功</string>
    <string name="tip_content_one">持卡人姓名不能为空</string>
    <string name="tip_content_two">支行名称不能为空</string>
    <string name="tip_content_three">银行卡号不能为空</string>
    <string name="application_unbing_fail">解除失败</string>
    <string name="tip_withdrawal_record">您目前还没有进行提现</string>
    <string name="tip_transaction_record">您目前还没有进行交易</string>
    <string name="tip">提示</string>
    <string name="tip_stop">你确定要终止与设计师的合作吗？</string>
    <string name="serviced">设计师已做过量房服务</string>
    <string name="serviceding">设计师还未提供量房服务</string>
    <string name="tip_success">保存成功</string>
    <string name="network_error">网络连接失败!</string>
    <string name="cancel">取消</string>
    <string name="call_phone">拨打</string>
    <string name="call_number">拨打400-650-3333？</string>
    <string name="designer_bid_detail_bid">是否确定应标</string>
    <string name="designer_bid_detail_realy_name">请先到个人中心完成实名认证</string>
    <string name="designer_bid_detail_realy_immediately_validation">立即验证</string>
    <string name="designer_bid_detail_success">应标成功</string>
    <string name="consume_send_success">选TA量房成功</string>
    <string name="welcome_dialog">需要登陆后，进行后续操作</string>
    <string name="alipay_error">支付失败！</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh">&#160;&#160;&#160;&#160;&#160;&#160;&#160;下拉可以刷新</string>
    <string name="pullup_to_load">上拉可以加载更多</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="release_to_load">松开立即加载更多</string>
    <string name="loading">正在加载更多的数据...</string>
    <string name="load_succeed">加载完成！</string>
    <string name="load_fail">加载失败</string>
    <string name="refreshing">正在刷新数据中...</string>
    <string name="release_to_refresh">&#160;&#160;&#160;&#160;&#160;&#160;&#160;松开立即刷新</string>
    <string name="release_to_refresh_lastTime">最后更新：今天</string>
    <string name="im_toast_nomore_data">没有数据了</string>
    <string name="reservation">立即预约</string>
    <string name="fish">订单结束&#160;&#160;&#160;&#160;已上传量房交付物</string>
    <string name="autonym_no_self_identity">本人持证正面照上传成功</string>
    <string name="autonym_no_identity_front">身份证正面照上传成功</string>
    <string name="autonym_no_identity_contrary">身份证反面照上传成功</string>
    <string name="autonym_information_delivery">提交信息</string>
    <string name="scanner_text">将二维码放入框内,即可自动扫描</string>
    <string name="consumer_zxing_describe">请设计师扫码为您创建套餐项目</string>
    <string name="tab_im">聊天</string>
    <string name="tab_personalcenter">我的项目</string>
    <string name="tab_hall">应标大厅</string>
    <string name="tab_home">案例</string>
    <string name="tab_six_products">我要装修</string>
    <string name="design_contract">设计合同</string>
    <string name="send_design_contract">发送设计合同</string>
    <string name="uploaded_deliverable">上传量房交付物</string>
    <string name="in_contract_sent">合同发送中...</string>
    <string name="agree_and_send_design_first">同意并支付设计首款</string>
    <string name="agree_and_send_design_first_new">立即付款</string>
    <string name="confirmation_and_payment">确认并付款</string>
    <string name="receiving_room_deliverable">接收量房交付物</string>
    <string name="room_first_less_than_eighty_percent_of_the_total_amount_of_design">设计首款不能低于设计总额的80%</string>
    <string name="room_first_less_than_eighty_percent_of_the_total_amount_measure_fee">设计首款不能少于量房款</string>
    <string name="room_first_less_than_eighty_percent_of_the_total_measure_fee">首款金额应大于量房费用</string>
    <string name="total_quantity_room_first_is_not_greater_than_design">设计首款不能大于设计总额</string>
    <string name="please_fill_out_the_design_first">请正确填写设计首款</string>
    <string name="costs_cannot_be_negative">费用不能为负数</string>
    <string name="please_fill_in_the_total_project_design">请填写项目设计总额</string>
    <string name="please_fill_out_each_increases_the_cost_of_a">请填写每增加一张的费用</string>
    <string name="please_fill_in_the_number_of_rendering">请填写渲染图的张数</string>
    <string name="please_fill_in_the_number_of_drawing">请填写效果图的张数</string>
    <string name="detailed_address_cannot_be_empty">请正确填写小区名称</string>
    <string name="please_fill_in_the_right_phone_number">请正确填写手机号</string>
    <string name="please_fill_in_the_right_post_number">请正确填写邮编</string>
    <string name="please_fill_in_the_right_phone_email">请正确填写邮箱</string>
    <string name="the_name_cannot_be_empty">姓名不能为空</string>
    <string name="the_contract_sent_successfully">合同发送成功</string>
    <string name="the_contract_sent_failure">合同发送失败</string>
    <string name="sure_and_send">确定发送</string>
    <string name="sure_modify_send">修改发送</string>
    <string name="flow_contract_num">合同编号：</string>
    <string name="flow_basic_info">基本信息</string>
    <string name="flow_owner">甲方(消费者)：</string>
    <string name="flow_phone">手机号码：</string>
    <string name="flow_email_address">电子邮箱：</string>
    <string name="flow_address_email">邮箱地址：</string>
    <string name="flow_postal_code">邮箱编号：</string>
    <string name="flow_decorate_address">装修地址：</string>
    <string name="flow_second_party">乙方(设计师)：</string>
    <string name="flow_detail_address">详细地址：</string>
    <string name="flow_hint_project_address">请输入项目地址</string>
    <string name="flow_hint_email">请输入电子邮箱（选填）</string>
    <string name="flow_hint_jiafang_name">请输入甲方姓名</string>
    <string name="flow_hint_first_past_cost">设计首款不低于设计费总额的80%</string>
    <string name="flow_material_list">材料清单(包括:主材清单、家具清单、施工报价单) 1 份</string>
    <string name="flow_construction_drawings">施工图纸 1 套</string>
    <string name="flow_3D_project">3D空间方案设计 1 份</string>
    <string name="flow_service_address">服务地址：</string>
    <string name="flow_hint_jiafang_name_address">请输入甲方姓名</string>
    <string name="flow_renderings">渲&#160;&#160;染&#160;&#160;图：</string>
    <string name="flow_monad_zhang">张</string>
    <string name="flow_every_increase_a_rendering_fee">每增加一张效果图费用：</string>
    <string name="flow_monad_rmb">元</string>
    <string name="flow_the_total_project_design">本项目设计费总额：</string>
    <string name="flow_the_project_design">本项目设计费用</string>
    <string name="flow_first_design_cost">设计首款：</string>
    <string name="flow_last_design_cost">设计尾款：</string>
    <string name="flow_examine_contract_detail">查看合同详情</string>
    <string name="flow_contract_detail">合同详情</string>
    <string name="flow_project_deliverables">设计项目交付物</string>
    <string name="flow_have_read_all_contract_detail">我已阅读所有合同内容</string>
    <string name="flow_design_work_content">设计工作内容</string>
    <string name="flow_effect_picture">效果图：</string>
    <string name="flow_project_data">项目资料</string>
    <string name="flow_cost_detail">支付详情</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="name_space">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="telephone_space">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：</string>
    <string name="flow_particular_cost">支付明细</string>
    <string name="flow_aggregate_amount">总&#160;&#160;金&#160;&#160;额：</string>
    <string name="flow_pay_way">支付方式：</string>
    <string name="flow_should_first">本次应付设计首款：</string>
    <string name="flow_deduct_measure_cost">已扣除量房费</string>
    <string name="deduct_measure_cost">&#160;&#160;量房费</string>
    <string name="flow_agree_pay">同意合同并支付首款</string>
    <string name="flow_should_last">本次应付设计尾款：</string>
    <string name="flow_measure_house_cost">量&#160;&#160;房&#160;&#160;费：</string>
    <string name="pay">立即支付</string>
    <string name="evaluation">&#160;&#160;立即评价&#160;&#160;</string>
    <string name="i_want_to_pay">我要支付</string>
    <string name="loding">加载中...</string>
    <string name="loding_end">已为最后一条需求。</string>
    <string name="loding_finish">加载完成</string>
    <string name="demand_planning_budget">设计预算：</string>
    <string name="demand_planning_budget_title">设计预算</string>
    <string name="demand_project_budget">装修预算：</string>
    <string name="demand_project_budget_title">装修预算</string>
    <string name="please_enter_your_name">请输入姓名</string>
    <string name="please_enter_your_phone">请输入手机号码</string>
    <string name="please_select_design_budget">请选择设计预算</string>
    <string name="please_select_decorate_budget">请选择装修预算</string>
    <string name="demand_project_area">项目面积：</string>
    <string name="please_enter_area">请输入面积(平米)</string>
    <string name="demand_house_model">户&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型：</string>
    <string name="please_select_family">请选择户型：室 厅 卫</string>
    <string name="demand_style">风&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;格：</string>
    <string name="please_select_style">请选择风格</string>
    <string name="demand_measure_house_time">量房时间：</string>
    <string name="demand_measure_house_time_title">量房时间</string>
    <string name="please_select_quantity_room_time">请选择量房时间</string>
    <string name="europe_and_america_style">欧美风</string>
    <string name="demand_measure_house_address">项目地址：</string>
    <string name="please_select_address">请选择省市区</string>
    <string name="demand_village_name">小区名称：</string>
    <string name="please_select_community_name">请输入小区名称</string>
    <string name="demand_measure_house_charge">量&#160;&#160;房&#160;&#160;费：</string>
    <string name="flow_send">发送</string>
    <string name="agreed">同意</string>
    <string name="agreed_home">确定量房</string>
    <string name="refuse">拒绝</string>
    <string name="amount_of_time_is_empty">请选择量房时间</string>
    <string name="amount_of_time_than_current_time_one_hour">量房时间至少大于当前时间一小时</string>
    <string name="confirm_room_success">确认量房成功</string>
    <string name="confirm_room_fail">确认量房失败</string>
    <string name="refused_room_fail">拒绝量房失败</string>
    <string name="refused_room_success">拒绝量房成功</string>
    <string name="choose_ta_room_success">选TA量房成功</string>
    <string name="choose_ta_room_fail">选TA量房失败</string>
    <string name="agree_measure_house_time">请选择量房时间</string>
    <string name="the_designer_rejected_quantity">WkFlowMea.设计师拒绝量房</string>
    <string name="consumer_should_agree_with_mark">WkFlowMea.消费者同意应标</string>
    <string name="phone">手机号码：</string>
    <string name="data_null">暂无数据</string>
    <string name="flow_rendering_design">渲染图设计</string>
    <string name="flow_design_blueprint">设计图纸</string>
    <string name="flow_bill_of_materials">材料清单</string>
    <string name="deliver_measure_consumer">量房交付</string>
    <string name="deliver_measure_consumer_title">我的量房交付</string>
    <string name="three_plan">3D设计方案</string>
    <string name="demand_project_address">项目地址：</string>
    <string name="consumer_decoration_buildtime">创建时间：</string>
    <string name="consumer_decoration_name">家装订单名字</string>
    <string name="consumer_decoration_project_id">项目编号：</string>
    <string name="consume_phone">联系电话：</string>
    <string name="consume_detail_address">小区名称：</string>
    <string name="project_address">项目地址：</string>
    <string name="consumer_decoration_remaintime">剩余天数：</string>
    <string name="my_bid_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="xiao_wu">小武</string>
    <string name="hello">你好：</string>
    <string name="time_hour">11：11</string>
</resources>