<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


    <RadioGroup
        android:id="@+id/designer_main_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_55"
        android:background="@color/bg_22"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/designer_main_radio_btn"
            style="@style/main_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/selector_home"
            android:text="@string/tab_home"/>

        <RadioButton
            android:id="@+id/designer_indent_list_btn"
            style="@style/main_tab_bottom"
            android:checked="false"
            android:drawableTop="@drawable/selector_hall"
            android:text="@string/tab_hall"
            android:visibility="visible"/>

        <RadioButton
            android:id="@+id/designer_session_radio_btn"
            style="@style/main_tab_bottom"
            android:checked="false"
            android:drawableTop="@drawable/selector_chat"
            android:text="@string/tab_im"/>

        <RadioButton
            android:id="@+id/designer_person_center_radio_btn"
            style="@style/main_tab_bottom"
            android:checked="false"
            android:drawableTop="@drawable/selector_personal"
            android:text="@string/tab_personalcenter"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_msg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_6"
            android:background="@drawable/redsharp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_gron_msg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>