<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_item_consumer_decoration"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:visibility="gone">

    <LinearLayout
        android:id="@+id/ll_issue_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demand_project_address"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/tv_issue_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>

    <!--装修预算-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demand_project_budget"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/tv_decoration_issue_demand_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demand_planning_budget"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/tv_decoration_design_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consumer_decoration_remaintime"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/tv_decoration_endday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/demand_style"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/tv_issue_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25"
        android:layout_marginLeft="@dimen/size_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/consumer_decoration_buildtime"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>

        <TextView
            android:id="@+id/consumer_decoration_buildtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_15"/>
    </LinearLayout>

    <include layout="@layout/view_parting_line"></include>


</LinearLayout>
