<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_consumer_decoration"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/view_parting_line"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/size_10">

        <ImageView
            android:id="@+id/iv_tag_ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_bei_normal"/>

        <TextView
            android:id="@+id/tv_consumer_decoration_beishu_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_toRightOf="@id/iv_tag_ref"
            android:text="@string/consumer_decoration_name"
            android:textColor="@color/bg_33"
            android:textSize="@dimen/font_16"/>

    </RelativeLayout>

    <include layout="@layout/view_parting_line"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_ff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@color/black">
            <!--项目编号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumer_decoration_project_id"
                    android:textColor="@color/bg_9E"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_decoration_beishu_projectid"
                    android:layout_width="@dimen/size_1"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/no_color"
                    android:textColor="@color/bg_9E"
                    android:textSize="@dimen/font_15"/>
            </LinearLayout>

            <!--姓名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/my_bid_name"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_decoration_beishu_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/no_color"
                    android:gravity="center_vertical"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>
            </LinearLayout>
            <!--联系电话-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consume_phone"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_decoration_beishu_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/no_color"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

            </LinearLayout>

            <!--项目地址-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_address"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_decoration_beishu_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/no_color"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

            </LinearLayout>

            <!--小区名称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_25"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consume_detail_address"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

                <TextView
                    android:id="@+id/tv_consumer_decoration_beishu_homeaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/no_color"
                    android:textColor="@color/bg_33"
                    android:textSize="@dimen/font_15"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/view_parting_line"></include>

    <ListView
        android:id="@+id/lv_decoration_bid_beishu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>